[package]
name = "main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
to_vec = { path = "../to_vec" }
to_vec_derive = { path = "../to_vec_derive" }