[package]
name = "main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
struct2vec = { path = "../struct2vec" }
struct2vec_derive = { path = "../struct2vec_derive" }