[package]
name = "main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
struct2vec = { version = "0.1.3", features = ["struct2vec_derive"]}
from_value_derive = "0.1.0"
rust_decimal = "1.15.0"
axum = "0.5.6"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
whatever = {version = "0.2.33", features = ["full"]}
tokio = {version = "1.18.2", features = ["full"] }
