[package]
name = "struct2vec"
version = "0.1.3"
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/ToVec/blob/main/README.md"
repository = "https://github.com/ptechen/ToVec.git"
license = "MIT OR Apache-2.0"
#readme = "README.md"
description = "Rust structure to slice."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.66"
struct2vec_derive = "^0.1"

[features]
struct2vec_derive = []
