[package]
name = "struct2vec_derive"
version = "0.1.9"
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/ToVec/blob/main/README.md"
repository = "https://github.com/ptechen/ToVec.git"
license = "MIT OR Apache-2.0"
#readme = "README.md"
description = "Rust structure to slice."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
struct2vec = "^0.1"
quote = "^1.0"
serde_json = "^1.0"
syn = { version = "^1.0", features = ["extra-traits"]  }
proc-macro2 = "^1.0"
